--- a/i3/.conkyrc
+++ b/i3/.conkyrc
@@ -1,41 +1,41 @@
-out_to_x no
-own_window no
-out_to_console yes
-background no
-max_text_width 0
+conky.config = {
+    out_to_x = false,
+    own_window = false,
+    out_to_console = true,
+    background = false,
+    max_text_width = 0,
 
-# Update interval in seconds
-update_interval 2.0
+    -- Update interval in seconds
+    update_interval = 2.0,
 
-# This is the number of times Conky will update before quitting.
-# Set to zero to run forever.
-total_run_times 0
+    -- This is the number of times Conky will update before quitting.
+    -- Set to zero to run forever.
+    total_run_times = 0,
 
-# Shortens units to a single character (kiB->k, GiB->G, etc.). Default is off.
-short_units yes
+    -- Shortens units to a single character (kiB->k, GiB->G, etc.). Default is off.
+    short_units = true,
 
-# How strict should if_up be when testing an interface for being up?
-# The value is one of up, link or address, to check for the interface
-# being solely up, being up and having link or being up, having link
-# and an assigned IP address. 
-if_up_strictness address
+    -- How strict should if_up be when testing an interface for being up?
+    -- The value is one of up, link or address, to check for the interface
+    -- being solely up, being up and having link or being up, having link
+    -- and an assigned IP address.
+    if_up_strictness = 'address',
 
-# Add spaces to keep things from moving about?  This only affects certain objects.
-# use_spacer should have an argument of left, right, or none
-use_spacer left
+    -- Add spaces to keep things from moving about?  This only affects certain objects.
+    -- use_spacer should have an argument of left, right, or none
+    use_spacer = 'left',
 
-# Force UTF8? note that UTF8 support required XFT
-override_utf8_locale no
+    -- Force UTF8? note that UTF8 support required XFT
+    override_utf8_locale = false,
 
-# number of cpu samples to average
-# set to 1 to disable averaging
-cpu_avg_samples 2
+    -- number of cpu samples to average
+    -- set to 1 to disable averaging
+    cpu_avg_samples = 2,
+};
 
-# Stuff after 'TEXT' will be formatted on screen
-TEXT
-
-# JSON for i3bar
-[
+-- JSON for i3bar
+conky.text = [[
+  [
 
     {
         "full_text": " ${exec xprop -id $(xprop -root | awk '/_NET_ACTIVE_WINDOW\(WINDOW\)/{print $NF}') | awk '/_NET_WM_NAME/{$1=$2="";print}' | tr -s ' ' | awk '{print substr($0, 3, length($0) - 3)}'} ", "name":"window"
@@ -46,7 +46,7 @@ TEXT
 	${else}"\#ff0000"${endif}
     },
     {
-       "full_text" : "${time %a %d.%m.%y} LON: ${time %H:%M}"
+       "full_text" : "${time %a %d.%m.%y} ZRH: ${time %H:%M}"
     },
     {
        "full_text" : "NYC: ${tztime America/New_York %H:%M}"
@@ -54,5 +54,6 @@ TEXT
     {
        "full_text" : "MTV: ${tztime America/Los_Angeles %H:%M}"
     }
-],
+    ],
+]];
 
