--- a/i3/.conkyrc
+++ b/i3/.conkyrc
@@ -41,19 +41,28 @@ conky.text = [[
         "full_text": " ${exec xprop -id $(xprop -root | awk '/_NET_ACTIVE_WINDOW\(WINDOW\)/{print $NF}') | awk '/_NET_WM_NAME/{$1=$2="";print}' | tr -s ' ' | awk '{print substr($0, 3, length($0) - 3)}'} ", "name":"window"
     },
     {
-       "full_text" : "RAM ${memperc}%" , "color" :
+       "full_text" : "RAM: ${memperc}%" , "color" :
         ${if_match ${memperc}<90}"\#ffffff"
 	${else}"\#ff0000"${endif}
     },
     {
-       "full_text" : "${time %a %d.%m.%y} ZRH: ${time %H:%M}"
+    "full_text": "W:${color}${fs_free /}"
     },
     {
-       "full_text" : "NYC: ${tztime America/New_York %H:%M}"
+        "full_text": "E:${color}${fs_free /home/caen/E}"
+    },
+    {
+       "full_text" : "${time %a %d.%m.%y}"
+    },
+    {
+       "full_text" : "TPE: ${tztime Asia/Taipei %H:%M}"
     },
     {
        "full_text" : "MTV: ${tztime America/Los_Angeles %H:%M}"
+    },
+    {
+       "full_text" : "ZRH: ${time %H:%M}"
     }
-    ],
+  ],
 ]];
 
