--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango: SourceCodePro-Regular 8
+font pango: SourceCodePro-Regular 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -29,30 +29,45 @@ font pango: SourceCodePro-Regular 8
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
-# class                 border  backgr. text    indicator child_border
-client.focused          #4c7899 #222222 #ffffff #2196F3   #2196F3
-client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
-client.unfocused        #333333 #222222 #888888 #292d2e   #222222
-client.urgent           #2f343a #900000 #ffffff #900000   #900000
-client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
+# class                 border  bground text    indicator child_border
+client.focused          #F4F4F4 #7CBAC1 #353535 #EA7340   #285577
+client.focused_inactive #333333 #86A0A5 #FFFFFF #484E50   #5F676A
+client.unfocused        #333333 #6A717A #D8D8D8 #292D2E   #222222
+client.urgent           #2F343A #BC3A2C #FFFFFF #900000   #900000
+client.placeholder      #000000 #0C0C0C #FFFFFF #000000   #0C0C0C
 
-client.background       #ffffff
+client.background       #FFFFFF
+# Start i3bar to display a workspace bar (plus the system information i3status
+# finds out, if available)
+bar {
+    tray_output primary
+    status_command $HOME/bin/conky-i3bar
+    colors {
+        background #000000
+            statusline #FFFFFF
+            separator  #666666
+
+            focused_workspace  #4C7899 #7CBAC1 #353535
+            active_workspace   #333333 #222222 #E4E4E4
+            inactive_workspace #333333 #222222 #888888
+            urgent_workspace   #2F343A #902F28 #FFFFFF
+            binding_mode       #2F343A #902F28 #FFFFFF
+    }
+}
 
 # start a terminal
-bindsym $mod+Return exec kitty
+bindsym $mod+Return exec kitty tmux new-session
 
 # kill focused window
 bindsym $mod+Shift+q kill
 bindsym $mod+Control+Shift+q kill
 bindsym Control+Shift+q kill
 
-# start dmenu (a program launcher)
-bindsym $mod+Shift+d exec dmenu_run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
-bindsym $mod+d exec --no-startup-id rofi -show drun -show-icons
-bindsym $mod+Tab exec --no-startup-id rofi -show
+bindsym $mod+d exec --no-startup-id "rofi -combi-mode window,drun -show combi -modi combi -show-icons"
+bindsym $mod+Shift+d exec --no-startup-id "rofi  -show run -modi run -show-icons"
 
 # change focus
 bindsym $mod+j focus left
@@ -82,9 +97,13 @@ bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
 bindsym $mod+h split h
+bindsym $mod+Shift+Control+Right focus right; split h; focus left; move right
+bindsym $mod+Shift+Control+Left focus left; split h; focus right; move left
 
 # split in vertical orientation
 bindsym $mod+v split v
+bindsym $mod+Shift+Control+Up focus up; split v; focus down; move up
+bindsym $mod+Shift+Control+Down focus down; split v; focus up; move down
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
@@ -147,7 +166,7 @@ bindsym $mod+F5 workspace 10
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
+bindsym $mod+Shift+r exec --no-startup-id pkill compton; restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
@@ -176,23 +195,7 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
-
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-bar {
-       	tray_output primary
-	status_command $HOME/bin/conky-i3bar
-		colors {
-			background #242424
-			statusline #eeeeee
-			separator #666666
-			#		   border  backgr. text
-			focused_workspace  #4c7899 #2c2c2c #ffffff
-			active_workspace   #333333 #5f676a #ffffff
-			inactive_workspace #333333 #2c2c2c #888888
-			urgent_workspace   #2f343a #900000 #ffffff
-		}
-}
+bindsym $mod+z resize set 400 700; floating enable; move window to position cursor
 
 # lock screen
 # bindsym Mod1+Mod4+l exec "i3lock -p win -i ~/Documents/wallpaper/8k-mountain.jpg  -f && xset dpms force off"
@@ -218,13 +221,14 @@ bindsym $mod+minus sticky toggle
 bindsym $mod+p exec gnome-screenshot -ai
 bindsym $mod+Shift+p exec gpick -p
 bindsym $mod+Control+p exec gpick
-bindsym Mod1+Tab workspace back_and_forth
+bindsym $mod+Tab workspace back_and_forth
 
 hide_edge_borders smart #none|vertical|horizontal|both|smart
 new_window 1pixel
 
 bindsym $mod+Shift+x [floating class="kitty"] move scratchpad
 bindsym $mod+x [floating] scratchpad show
+bindsym $mod+t border toggle
 
 bindsym Mod1+Control+e exec nemo
 
@@ -233,5 +237,6 @@ bindsym $mod+Shift+f move workspace to output left
 
 for_window [class="Gpick*"] floating enable
 
-exec compton -b --config ~/.config/compton.conf
+exec "killall compton; compton -b --config ~/.config/compton.conf"
+exec --no-startup-id dunst -conf  ~/.dunstrc
 
