--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,9 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango: SourceCodePro-Regular 9
+font pango: FiraCode-Regular 11, FontAwesome 10
+
+title_align center #left|center|right
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -30,34 +32,35 @@ font pango: SourceCodePro-Regular 9
 floating_modifier $mod
 
 # class                 border  bground text    indicator child_border
-client.focused          #F4F4F4 #7CBAC1 #353535 #EA7340   #285577
-client.focused_inactive #333333 #86A0A5 #FFFFFF #484E50   #5F676A
-client.unfocused        #333333 #6A717A #D8D8D8 #292D2E   #222222
+client.focused          #2F343F #2F343F #FAFAFB #EA7340   #f8961e
+client.focused_inactive #1F242F #1F242F #989796 #484E50   #5F676A
+client.unfocused        #131415 #091011 #989796 #292D2E   #222222
 client.urgent           #2F343A #BC3A2C #FFFFFF #900000   #900000
 client.placeholder      #000000 #0C0C0C #FFFFFF #000000   #0C0C0C
 
-client.background       #FFFFFF
+client.background       #2F343F
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-    tray_output primary
-    status_command $HOME/bin/conky-i3bar
+    
     colors {
-        background #000000
-            statusline #FFFFFF
-            separator  #666666
+        background #2f343f
+        statusline #464040
+        separator #4b5262
 
-            focused_workspace  #4C7899 #7CBAC1 #353535
-            active_workspace   #333333 #222222 #E4E4E4
-            inactive_workspace #333333 #222222 #888888
-            urgent_workspace   #2F343A #902F28 #FFFFFF
-            binding_mode       #2F343A #902F28 #FFFFFF
+        # colour of         border  bg      text
+        focused_workspace   #2f343f #bf616a #d8dee8
+        active_workspace    #2f343f #2f343f #d8dee8
+        inactive_workspace  #2f343f #2f343f #d8dee8
+        urgent_workspace    #2f343f #ebcb8b #2f343f
     }
+    status_command i3status -c ~/.config/i3/i3status
 }
 
 # start a terminal
-bindsym $mod+Return exec kitty #tmux new-session
-bindsym $mod+Shift+Return exec kitty --detach zsh -c "tmux attach -t $(tmux list-session | grep -v attached | cut -d':' -f1 | head -n 1)"
+# bindsym $mod+Return exec kitty #tmux new-session
+# bindsym $mod+Shift+Return exec kitty --detach zsh -c "tmux attach -t $(tmux list-session | grep -v attached | cut -d':' -f1 | head -n 1)"
+ bindsym $mod+Return exec gnome-terminal
 
 set $close "Close the window? (y/n)"
 
@@ -135,15 +138,23 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
 # focus the child container
-#bindsym $mod+d focus child
+bindsym $mod+Ctrl+d focus child
+
+set $w1 "1: Dev"
+set $w2 "2: Term"
+set $w3 "3: WWW Corp"
+set $w4 "4: Corp 1"
+set $w5 "5: Corp 2"
+set $w6 "6: Perso"
+
 
 # switch to workspace
-bindsym $mod+1 workspace 1: Dev
-bindsym $mod+2 workspace 2: Term
-bindsym $mod+3 workspace 3: WWW Corp
-bindsym $mod+4 workspace 4: Corp 1
-bindsym $mod+5 workspace 5: Corp 2
-bindsym $mod+6 workspace 6: Perso
+bindsym $mod+1 workspace $w1
+bindsym $mod+2 workspace $w2
+bindsym $mod+3 workspace $w3
+bindsym $mod+4 workspace $w4
+bindsym $mod+5 workspace $w5
+bindsym $mod+6 workspace $w6
 bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
@@ -152,12 +163,12 @@ bindsym XF86Forward workspace next
 bindsym XF86Back workspace prev
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1: Dev
-bindsym $mod+Shift+2 move container to workspace 2: Term
-bindsym $mod+Shift+3 move container to workspace 3: WWW Corp
-bindsym $mod+Shift+4 move container to workspace 4: Corp 1
-bindsym $mod+Shift+5 move container to workspace 5: Corp 2
-bindsym $mod+Shift+6 move container to workspace 6: Perso
+bindsym $mod+Shift+1 move container to workspace $w1
+bindsym $mod+Shift+2 move container to workspace $w2
+bindsym $mod+Shift+3 move container to workspace $w3
+bindsym $mod+Shift+4 move container to workspace $w4
+bindsym $mod+Shift+5 move container to workspace $w5
+bindsym $mod+Shift+6 move container to workspace $w6
 bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
@@ -178,7 +189,6 @@ bindsym $mod+F5 workspace 10
 bindsym $mod+Shift+m move container to workspace media; workspace media
 bindsym $mode+Shift+m workspace media
 
-assign [title=".*YouTube Music$"] media
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -216,7 +226,7 @@ bindsym $mod+z resize set 400 700; floating enable; move window to position curs
 
 # lock screen
 # bindsym Mod1+Mod4+l exec "i3lock -p win -i ~/Documents/wallpaper/8k-mountain.jpg  -f && xset dpms force off"
-bindsym Mod1+Mod4+l exec "env XSECURELOCK_NO_COMPOSITE=0 XSECURELOCK_COMPOSITE_OBSCURER=1 xsecurelock"
+bindsym Mod1+Mod4+l exec "xsecurelock"
 
 # Pulse Audio controls
 set $sink @DEFAULT_SINK@
@@ -231,11 +241,11 @@ bindsym $mod+KP_Add exec --no-startup-id pactl set-sink-volume $sink +5% #increa
 bindsym $mod+KP_Subtract exec --no-startup-id pactl set-sink-volume $sink -5% #decrease sound volume
 bindsym $mod+KP_Enter exec --no-startup-id pactl set-sink-mute $sink toggle # mute sound
 
-focus_follows_mouse no
+focus_follows_mouse yes
 popup_during_fullscreen smart
 
 bindsym $mod+minus sticky toggle
-bindsym $mod+p exec gnome-screenshot -ai
+bindsym $mod+p exec flameshot gui -d 500
 bindsym $mod+Shift+p exec gpick -p
 bindsym $mod+Control+p exec gpick
 bindsym $mod+Tab workspace back_and_forth
@@ -243,23 +253,44 @@ bindsym $mod+Tab workspace back_and_forth
 hide_edge_borders smart #none|vertical|horizontal|both|smart
 new_window 1pixel
 
+# Scratchpad
 bindsym $mod+Shift+x move scratchpad
 bindsym $mod+x scratchpad show
-bindsym $mod+t border toggle
+bindsym $mod+g [title="^(Android )?Emulator"] move container to workspace emulator; floating enable
+
+# Border toggle
+bindsym $mod+t border toggle 
 bindsym Mod1+Control+e exec nemo
 bindsym $mod+c move absolute position mouse
 
+# Workspace Monitor Switch
 bindsym $mod+Shift+g move workspace to output right
 bindsym $mod+Shift+f move workspace to output left
 
+# Workspaces Assignment
+assign [class="jetbrains-studio"] $w1
+assign [class="jetbrains-idea"] $w1
+assign [title=".*YouTube Music$"] media
+
+# Window Formatting
+for_window [class=".*"] title_format "<span size='smaller'>%title</span>"
 for_window [class="Gpick*"] floating enable
 for_window [title="JetBrains Toolbox"] floating enable, move absolute position mouse
-for_window [class="jetbrains-studio"] title_format "<span background='#3DDC84' foreground='#1E1D1C'>  %title            </span>"
-for_window [class="crx_fopnnpbiicdignnlklkacidbjkkbodph"] floating enable, resize set 400 700, move window to position cursor
-for_window [title="^Android Emulator -"] floating enable, resize set 400 700
-for_window [class="jetbrains-studio" title="^win\d+$"] focus
+for_window [class="jetbrains-studio"] title_format "<span foreground='#3DDC84' size='smaller'>   %title</span>"
+for_window [class="jetbrains-idea"] title_format "  <span foreground='#05c1fd' size='smaller'> %title</span>"
+for_window [class="jetbrains-idea" title=".*android/master"] title_format "[MSTR]<span size='smaller'> %title</span>"
+for_window [class="jetbrains-idea" title=".*android/rvc"] title_format \
+           "<span foreground='#05c1fd' stretch='ultracondensed'>[RVC]</span><span size='smaller'> %title</span>"
+for_window [class="jetbrains-idea" title=".*android/sc"] title_format \
+          "<span foreground='#05c1fd' stretch='ultracondensed'>[SC] </span><span size='smaller'> %title</span>"
+for_window [class="Google-chrome" instance="crx_icnbakklofenjdkjiojfillaededmonb"] title_format "<span size='smaller'>   %title</span>" # Google Chat
+for_window [title="Android Emulator -"] floating enable, resize set 400 700
+for_window [class="scrcpy"] floating enable, border normal 
+for_window [class="jetbrains-*" title="^win\d+$"] floating enable, move to workspace $w1
 
-exec "killall compton; compton -b --config ~/.config/compton.conf"
-exec --no-startup-id dunst -conf  ~/.dunstrc
+#exec --no-startup-id "killall picom; picom -b"
+exec --no-startup-id "dunst -conf ~/.dunstrc &> /tmp/dunst"
+# exec_always --no-startup-id polybar -c $DOTFILE_DIR/i3/polybar vadim
+ 
 
 
