--- a/kitty/diff.conf
+++ b/kitty/diff.conf
@@ -26,53 +26,37 @@ replace_tab_by \x20\x20\x20\x20
 
 #: Colors {{{
 
-pygments_style monokai
+pygments_style native
 
-#: The pygments color scheme to use for syntax highlighting. See
-#: pygments colors schemes <https://help.farbox.com/pygments.html> for
-#: a list of schemes.
+pygments_style          monokai
 
-# foreground black
-# background white
-#
- #: Basic colors
-#
-# title_fg black
-# title_bg white
+foreground              white
+background              black
 
-#: Title colors
-#
-# margin_bg #fafbfc
-# margin_fg #aaaaaa
-#
-# #: Margin colors
-#
-# removed_bg           #ffeef0
-# highlight_removed_bg #fdb8c0
-# removed_margin_bg    #ffdce0
-#
-# #: Removed text backgrounds
-#
-# added_bg           #e6ffed
-# highlight_added_bg #acf2bd
-# added_margin_bg    #cdffd8
-#
-# #: Added text backgrounds
-#
-# filler_bg #fafbfc
-#
-# #: Filler (empty) line background
-#
-# hunk_margin_bg #dbedff
-# hunk_bg        #f1f8ff
-#
-# #: Hunk header colors
+title_fg                white
+title_bg                black
 
-# search_bg #444
-# search_fg white
-# select_bg #b4d5fe
-# select_fg black
+margin_fg               white
+margin_bg               #212121
 
+removed_bg              #4b0000
+highlight_removed_bg    #7d0000
+removed_margin_bg       #212121
+
+added_bg                #003700
+highlight_added_bg      #007d00
+added_margin_bg         #212121
+
+filler_bg               black
+
+hunk_bg                 #212121
+hunk_margin_bg          #212121
+
+search_bg               #444
+search_fg               white
+
+select_bg               #b4d5fe
+select_fg               black
 #: Highlighting
 
 #: }}}
