--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -38,7 +38,7 @@
 	ds = diff --stat
 	dh =  diff HEAD~1
 	reball = ! gitrebase
-	con = ! gitbranchnum
+	con = ! gcon
 	dn = "!sh -c 'if [ $# -eq 0 ] ; then git d HEAD~1 HEAD ; else git d HEAD~`expr $1 + 1` HEAD~$1 ; fi' -"
 	reskeep = "!git reset HEAD~1 && git commit --allow-empty -C HEAD@{1} "
 
@@ -81,5 +81,5 @@
 [merge]
 	renameLimit = 999999
 [repo]
-	superprojectChoiceExpire = 1650012553
+	superprojectChoiceExpire = 1651741142
 	superprojectChoice = true
