--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -39,7 +39,7 @@
 	dh =  diff HEAD~1
 	reball = ! gitrebase
 	con = ! gcon
-	dn = "!sh -c 'if [ $# -eq 0 ] ; then git d HEAD~1 HEAD ; else git d HEAD~`expr $1 + 1` HEAD~$1 ; fi' -"
+	dn = "!sh -c 'if [ $# -eq 0 ] ; then git d HEAD~1 HEAD ; else git diff HEAD~`expr $1 + 1` HEAD~$1 ; fi' -"
 	reskeep = "!git reset HEAD~1 && git commit --allow-empty -C HEAD@{1} "
 
 	# Visual git branch using rofi
