--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -41,6 +41,8 @@
 	con = ! gcon
 	dn = "!sh -c 'if [ $# -eq 0 ] ; then git d HEAD~1 HEAD ; else git diff HEAD~`expr $1 + 1` HEAD~$1 ; fi' -"
 	reskeep = "!git reset HEAD~1 && git commit --allow-empty -C HEAD@{1} "
+	untemp="!git log -n 1 | grep -q -c \"TEMP\" && git reset HEAD~1"
+	temp="!git add -A; git rm $(git ls-files --deleted) 2> /dev/null; git commit --no-verify --no-gpg-sign -m \"TEMP\""
 
 	# Visual git branch using rofi
 	vb="! git b | rofi -dmenu | awk '{print$1}'"
@@ -81,5 +83,5 @@
 [merge]
 	renameLimit = 999999
 [repo]
-	superprojectChoiceExpire = 1657545328
+	superprojectChoiceExpire = 1663169187
 	superprojectChoice = true
