--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -5,3 +5,11 @@ bind-key C-A send-prefix
 set-option -g mouse on
 set-option -g base-index 1
 set -g history-limit 10000
+
+setw -g mode-keys vi
+
+# https://dev.to/iggredible/the-easy-way-to-copy-text-in-tmux-319g
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel
+bind P paste-buffer
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel
