--- a/i3/config
+++ b/i3/config
@@ -187,7 +187,7 @@ bindsym $mod+F4 workspace 9
 bindsym $mod+F5 workspace 10
 
 bindsym $mod+Shift+m move container to workspace media; workspace media
-bindsym $mode+Shift+m workspace media
+bindsym $mod+m workspace media
 
 
 # reload the configuration file
@@ -245,7 +245,7 @@ focus_follows_mouse no
 popup_during_fullscreen smart
 
 bindsym $mod+minus floating enable; sticky toggle; resize shrink width 20px; resize shrink height 20px
-bindsym $mod+Shift+minus floating enable; sticky toggle; resize set 600 400
+bindsym $mod+Shift+minus floating enable; resize set 600 400
 bindsym $mod+p exec flameshot gui -d 500
 bindsym $mod+Shift+p exec gpick -p
 bindsym $mod+Control+p exec gpick
@@ -313,6 +313,5 @@ exec --no-startup-id "dunst -conf ~/.dunstrc &> /tmp/dunst"
 exec --no-startup-id "feh --bg-fill  ~/.dotfiles/wallpaper/8k-mountain.jpg ~/.dotfiles/wallpaper/pexels-craig-adderley-1563355.jpg"
 exec --no-startup-id "copyq"
 exec --no-startup-id "setxkbmap -layout us -variant altgr-intl -option nodeadkeys"
-
 
 
