--- a/i3/config
+++ b/i3/config
@@ -13,20 +13,9 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango: FiraCode-Regular 11, FontAwesome 10
+font pango: FiraCode-Regular 11, FontAwesome 10, "Font Awesome 6 Brands" 10
 
 title_align center #left|center|right
-
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
-
-# Before i3 v4.8, we used to recommend this one as the default:
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, its unicode glyph coverage is limited, the old
-# X core fonts rendering does not support right-to-left and this being a bitmap
-# font, it doesn’t scale on retina/hidpi displays.
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -42,7 +31,6 @@ client.background       #2F343F
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-    
     colors {
         background #2f343f
         statusline #464040
@@ -257,7 +245,7 @@ new_window 1pixel
 # Scratchpad
 bindsym $mod+Shift+x move scratchpad
 bindsym $mod+x scratchpad show
-bindsym $mod+g [title="^(Android )?Emulator"] move container to workspace emulator; floating enable
+bindsym $mod+g [title="^(Android )?Emulator"] move container to workspace emulator, [title="^(Android )?Emulator"] floating enable
 
 # Border toggle
 bindsym $mod+t border toggle 
@@ -269,6 +257,9 @@ bindsym $mod+Shift+v exec copyq show
 # Workspace Monitor Switch
 bindsym $mod+Shift+g move workspace to output right
 bindsym $mod+Shift+f move workspace to output left
+
+# Copy from remote tmux buffer
+bindsym $mod+y exec --no-startup-id remote_copy_paste
 
 # Workspaces Assignment
 assign [class="jetbrains-studio"] $w1
@@ -284,6 +275,20 @@ for_window [title="JetBrains Toolbox"] floating enable, move absolute position m
 for_window [class="jetbrains-studio"] title_format "<span foreground='#3DDC84' size='smaller'>   %title</span>"
 for_window [class="jetbrains-idea"] title_format "  <span foreground='#05c1fd' size='smaller'> %title</span>"
 for_window [class="jetbrains-*" title="^win\d+$"] floating enable, move to workspace $w1   # Jetbrains splashscreen
+
+## Terminal
+for_window [class="*terminal*" title=".*ssh.*"] title_format \
+            "<span stretch='ultracondensed'> </span><span foreground='#05F1Cd' size='smaller'> %title</span>"
+for_window [class="*terminal*"] title_format \
+           "<span stretch='ultracondensed'> </span><span foreground='#05F1Cd' size='smaller'> %title</span>"
+
+## VS Code
+for_window [class="Code"] title_format \
+           "<span stretch='ultracondensed' foreground='#05D1Fd' > </span><span size='smaller'> %title</span>"
+
+## Google Chrome
+for_window [class="Google-chrome"] title_format \
+           "<span stretch='ultracondensed' foreground='#aa786c' > </span><span size='smaller'> %title</span>"
 
 ## Android Specific
 for_window [class="jetbrains-idea" title=".*android/rvc"] title_format \
@@ -313,5 +318,3 @@ exec --no-startup-id "dunst -conf ~/.dunstrc &> /tmp/dunst"
 exec --no-startup-id "feh --bg-fill  ~/.dotfiles/wallpaper/8k-mountain.jpg ~/.dotfiles/wallpaper/pexels-craig-adderley-1563355.jpg"
 exec --no-startup-id "copyq"
 exec --no-startup-id "setxkbmap -layout us -variant altgr-intl -option nodeadkeys"
-
-
