--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango: FiraCode-Regular 11, FontAwesome 10, "Font Awesome 6 Brands" 10
+font pango: FiraCode-Regular 12, FontAwesome 10, "Font Awesome 6 Brands" 10
 
 title_align center #left|center|right
 
@@ -21,7 +21,7 @@ title_align center #left|center|right
 floating_modifier $mod
 
 # class                 border  bground text    indicator child_border
-client.focused          #2F343F #2F343F #FAFAFB #EA7340   #f8961e
+client.focused          #2F343F #2F343F #FAFAFB #EA7340   #78A083
 client.focused_inactive #1F242F #1F242F #989796 #484E50   #5F676A
 client.unfocused        #131415 #091011 #989796 #292D2E   #222222
 client.urgent           #2F343A #BC3A2C #FFFFFF #900000   #900000
@@ -34,10 +34,10 @@ bar {
     colors {
         background #2f343f
         statusline #464040
-        separator #4b5262
+        separator #78A083
 
         # colour of         border  bg      text
-        focused_workspace   #2f343f #bf616a #d8dee8
+        focused_workspace   #2f343f #50727B #d8dee8
         active_workspace    #2f343f #2f343f #d8dee8
         inactive_workspace  #2f343f #2f343f #d8dee8
         urgent_workspace    #2f343f #ebcb8b #2f343f
